--- a/BraillePrinter/BraillePrinter/BraillePrinter.vcxproj.filters
+++ b/BraillePrinter/BraillePrinter/BraillePrinter.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="parsebraille.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inostdpolyfill.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
